prog/1stPartyLibs/quirrel/quirrel/testData/exec/runtime_type_check/assign_wrong_type_10.nut
local x = null

function fn(x, v: string|table = x) {
    return v
}

fn(0, "123")
